--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ configurations {
 	}
 }
 
+bootJar {
+	archiveFileName = 'dec.jar'
+	archiveVersion = "0.0.1"
+}
+
 repositories {
 	mavenCentral()
 }
